--- a/css/r_dashboard.css
+++ b/css/r_dashboard.css
@@ -298,7 +298,7 @@ section ul li a:focus-visible {
 }
 
 .appointments table {
-    display: none; /* ------------------------------------ */
+    /* display: none; ------------------------------------ */
     width: 100%;
     border-collapse: collapse;
 }
