--- a/css/manageTests.css
+++ b/css/manageTests.css
@@ -59,7 +59,7 @@ body {
 /* Main content styles */
 .main-content {
     flex-grow: 1;
-    padding: 20px;
+    padding: 100%;
     display: flex;
     flex-direction: column;
     position: relative;
